--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-server.port=4000
+ï»¿server.port=4000
 
 ########################
-#ffserver°æÊ¹ÓÃÒÔÏÂÅäÖÃ
-ffserver.home=/www/video2rtsp/ffserver
+#ffserverç‰ˆä½¿ç”¨ä»¥ä¸‹é…ç½®
+ffserver.home=/www/video2rtsp-1.0.0/ffserver
 ffserver.host=35.221.88.168
 
-#·ÖÅä¸øffserverÊ¹ÓÃµÄ¶Ë¿Ú³ØÆğÊ¼¶Ë¿Ú
+#åˆ†é…ç»™ffserverä½¿ç”¨çš„ç«¯å£æ± èµ·å§‹ç«¯å£
 ffserver.startPort=40001
-#·ÖÅä¸øffserverÊ¹ÓÃµÄ¶Ë¿Ú³Ø½ØÖ¹¶Ë¿Ú
+#åˆ†é…ç»™ffserverä½¿ç”¨çš„ç«¯å£æ± æˆªæ­¢ç«¯å£
 ffserver.endPort=40050
 ########################
